# ChangeLog for www-client/jd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/jd/ChangeLog,v 1.15 2009/07/15 23:09:34 matsuu Exp $

*jd-2.4.1_p090712 (15 Jul 2009)

  15 Jul 2009; MATSUU Takuto <matsuu@gentoo.org>
  -jd-2.4.1_beta090628.ebuild, +jd-2.4.1_p090712.ebuild:
  Version bumped.

*jd-2.4.1_beta090628 (01 Jul 2009)

  01 Jul 2009; MATSUU Takuto <matsuu@gentoo.org>
  +jd-2.4.1_beta090628.ebuild:
  Version bumped.

*jd-2.4.0_p090522 (27 May 2009)

  27 May 2009; MATSUU Takuto <matsuu@gentoo.org>
  -jd-2.4.0_beta090510.ebuild, +jd-2.4.0_p090522.ebuild:
  Version bumped.

*jd-2.4.0_beta090510 (11 May 2009)

  11 May 2009; MATSUU Takuto <matsuu@gentoo.org> -jd-2.1.0_p081228.ebuild,
  -jd-2.2.0_p090212.ebuild, +jd-2.4.0_beta090510.ebuild:
  Version bumped. Removed old versions.

*jd-2.3.0_p090305 (04 Mar 2009)

  04 Mar 2009; MATSUU Takuto <matsuu@gentoo.org> -jd-2.3.0_rc090302.ebuild,
  +jd-2.3.0_p090305.ebuild:
  Version bumped.

*jd-2.3.0_rc090302 (02 Mar 2009)

  02 Mar 2009; MATSUU Takuto <matsuu@gentoo.org>
  -jd-2.1.1_beta090128.ebuild, -jd-2.2.0_rc090208.ebuild,
  +jd-2.3.0_rc090302.ebuild:
  Version bumped. Removed old versions.

*jd-2.2.0_p090212 (14 Feb 2009)

  14 Feb 2009; MATSUU Takuto <matsuu@gentoo.org> +jd-2.2.0_p090212.ebuild:
  Version bumped.

*jd-2.2.0_rc090208 (08 Feb 2009)

  08 Feb 2009; MATSUU Takuto <matsuu@gentoo.org> +jd-2.2.0_rc090208.ebuild:
  Version bumped.

*jd-2.1.1_beta090128 (29 Jan 2009)

  29 Jan 2009; MATSUU Takuto <matsuu@gentoo.org>
  +jd-2.1.1_beta090128.ebuild:
  Version bumped.

*jd-2.1.0_p081228 (28 Dec 2008)

  28 Dec 2008; MATSUU Takuto <matsuu@gentoo.org> -jd-2.0.2_p080919.ebuild,
  -jd-2.0.3_p081124.ebuild, -jd-2.1.0_beta081216.ebuild,
  +jd-2.1.0_p081228.ebuild:
  Version bumped. Removed old versions.

*jd-2.1.0_beta081216 (16 Dec 2008)

  16 Dec 2008; MATSUU Takuto <matsuu@gentoo.org>
  +jd-2.1.0_beta081216.ebuild:
  Version bumped.
