@@ -1,6 +1,11 @@
 # ChangeLog for www-client/jd
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/jd/ChangeLog,v 1.15 2009/07/15 23:09:34 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/jd/ChangeLog,v 1.16 2009/10/06 17:35:30 matsuu Exp $
+
+*jd-2.4.2_p090927 (06 Oct 2009)
+
+  06 Oct 2009; MATSUU Takuto <matsuu@gentoo.org> +jd-2.4.2_p090927.ebuild:
+  Version bumped.
 
 *jd-2.4.1_p090712 (15 Jul 2009)
 
